Minor update to home page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <h1>XScalaWT - Scala DSL for Eclipse RCP and SWT applications</h1>
 
   <ul>
-    <li>Simple syntax for creating user interfaces</li>
+    <li>Simple syntax for creating SWT user interfaces</li>
     <li>Cascading style sheets implemented in about 100 lines of code</li>
     <li>Full support for Eclipse Data Binding</li>
   </ul>
