--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <li>Full support for Eclipse Data Binding</li>
   </ul>
 
-  <p>How simple?  How about this?:</p>
+  <p>How simple?  How about this?  Given "this" is an instanceof Composite:</p>
 
 <pre>
   implicit def unboxText2Double(t : Text) = java.lang.Double.parseDouble(t.getText())
