--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     text(celcius = _),
  
     button("Fareinheight => Celcius", {e : SelectionEvent => celcius.setText((5.0/9.0) * (fahrenheit - 32)) }),
-    button("Celcius -> Fareinheight", {e : SelectionEvent => fahrenheit.setText((9.0/5.0) * celcius + 32) })
+    button("Celcius => Fareinheight", {e : SelectionEvent => fahrenheit.setText((9.0/5.0) * celcius + 32) })
   )</pre>
 
   <h2>Documentation</h2>
