--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
   also just pull the source code. :-)</p>
 
   <ul>
-    <li><a href="http://www.coconut-palm-software.com/the_new_visual_editor/doku.php?id=blog:simplifying_swt_with_scala">Tutorial</a></li>
+    <li><a href="http://www.coconut-palm-software.com/the_new_visual_editor/doku.php?id=blog:simplifying_swt_with_scala">Tutorial
+    and motivation</a></li>
     <li><a href="http://www.coconut-palm-software.com/the_new_visual_editor/doku.php?id=blog:more_xscalawt">Simple code example for those who are impatient</a></li>
     <li><a href="http://www.coconut-palm-software.com/the_new_visual_editor/doku.php?id=blog:xscalawt_stylesheets">Stylesheets tutorial</a></li>
     <li><a href="http://www.coconut-palm-software.com/the_new_visual_editor/doku.php?id=blog:declarative_data_binding_using_xscalawt">Data binding</a></li>
