Updated directions for how to get a binary build

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
   <h2>Download and Build</h2>
 
   <p>XScalaWT source is maintained on the "gh_pages" branch at GitHub.
-    Current binaries are distributed through the P2/Update site
-    below.</p>
+    Currently I don't have a web host for binary builds / P2
+    repositories, but I'm working on that.</p>
 
   <p>You can build the latest XScalaWT by pulling the "gh_pages"
     branch, then running "mvn clean install" using Maven 3 from the
-    "build" directory.</p>
+    "build" directory.  Then you'll have your own P2 repository you
+    can add to your Maven/Tycho build in the "updatesite" project.</p>
 
-  <p><a href="com.coconut_palm_software.xscalawt.updatesite/target/site">XScalaWT Update Site / Maven-compatible P2 repo</a></p>
 </body>
 </html>
 
