Updated web site to reflect new patches/changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   var celcius : Text = null
  
   this.contains (
-    _.setLayout(new GridLayout(2, true)),
+    layout = new GridLayout(2, true),
  
     label("Fahrenheit"),
     label("Celcius"),
@@ -41,6 +41,7 @@
   also just pull the source code. :-)</p>
 
   <ul>
+    <li><a href="http://www.coconut-palm-software.com/pix/scala_declarative_dsls.svg"></a>http://www.coconut-palm-software.com/pix/scala_declarative_dsls.svg</li>
     <li><a href="http://www.coconut-palm-software.com/the_new_visual_editor/doku.php?id=blog:simplifying_swt_with_scala">Tutorial
     and motivation</a></li>
     <li><a href="http://www.coconut-palm-software.com/the_new_visual_editor/doku.php?id=blog:more_xscalawt">Simple code example for those who are impatient</a></li>
@@ -50,7 +51,10 @@
 
   <h2>Download and Build</h2>
 
-  <p>XScalaWT source is maintained on the "gh_pages" branch at GitHub.
+  <p>XScalaWT source is maintained on the 
+    <a href="https://github.com/pieceoftheloaf/XScalaWT/tree/gh-pages">
+      "gh_pages"</a>
+    branch at GitHub.
     Currently I don't have a web host for binary builds / P2
     repositories, but I'm working on that.</p>
 
