--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   also just pull the source code. :-)</p>
 
   <ul>
-    <li><a href="http://www.coconut-palm-software.com/pix/scala_declarative_dsls.svg">http://www.coconut-palm-software.com/pix/scala_declarative_dsls.svg</a></li>
+    <li><a href="http://www.coconut-palm-software.com/pix/scala_declarative_dsls.svg">XScalaWT Motivating Presentation</a></li>
     <li><a href="http://www.coconut-palm-software.com/the_new_visual_editor/doku.php?id=blog:simplifying_swt_with_scala">Tutorial
     and motivation</a></li>
     <li><a href="http://www.coconut-palm-software.com/the_new_visual_editor/doku.php?id=blog:more_xscalawt">Simple code example for those who are impatient</a></li>
